--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,5 @@
 <section class="property-binding">
-  <article>
+  <!--<article>
     <h3>Interpolation / Interpolação</h3>
     <p>String renderizada com Interpolação: {{ url }}</p>
     <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
@@ -13,4 +13,10 @@
     <img [src]="urlImagem">
     <img bind-src="urlImagem">
   </article>
+  -->
+
+  <article>
+    <h3>Class e Style Binding</h3>
+  </article>
+
 </section>
