--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -14,7 +14,7 @@
     <img bind-src="urlImagem">
   </article>
   -->
-
+<!--
   <article>
     <h3>Class e Style Binding</h3>
     <div>
@@ -55,6 +55,36 @@
         [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
         Esse texto somente aparece em caso de erro.
       </div>
+
+    </div>
+  </article>
+  -->
+  <article>
+    <h3>Event binding</h3>
+    <div>
+      <button (click)="botaoClicado()" 
+      class="btn btn-primary">
+        Me clique!
+      </button>
+    
+      <br><br>
+      <input type="text" 
+        (keyup)="oneKeyUp($event)"
+        (keyup.enter)="salvarValor(campoInput.value)"
+        (blur)="salvarValor(campoInput.value)" 
+        #campoInput />
+
+      <p>Valor atual: {{ valorAtual }}</p>
+      <p>Valor salvo: {{ valorSalvo }}</p>
+      
+      <br>
+
+      <span
+        (mouseover)="onMouseOverOut()"
+        (mouseout)="onMouseOverOut()"
+        [class.highlight]="isMouseOver">
+        Passe o mouse sobre mim
+      </span>
 
     </div>
   </article>
