--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,6 @@
+<!--
 <section class="property-binding">
-  <!--<article>
+  <article>
     <h3>Interpolation / Interpolação</h3>
     <p>String renderizada com Interpolação: {{ url }}</p>
     <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
@@ -58,7 +59,7 @@
 
     </div>
   </article>
-  -->
+  
   <article>
     <h3>Event binding</h3>
     <div>
@@ -89,4 +90,14 @@
     </div>
   </article>
 
+</section>
+-->
+
+<section class="input-output-properties">
+
+  <article>
+    <h3>Input/Output Properties</h3>
+
+    <app-curso [nome]="nomeDoCurso"></app-curso>
+  </article>
 </section>
